--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,10 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #common commands for building c++ executables and libraries
 rosbuild_add_library(dual_arms_lib src/dual_arms.cpp src/robot_head.cpp)
 rosbuild_add_executable(${PROJECT_NAME} src/main.cpp)
-rosbuild_add_executable(${PROJECT_NAME}_segmentation src/tabletop_segmentation.cpp)
+rosbuild_add_executable(tabletop_segmentation src/tabletop_segmentation.cpp)
 target_link_libraries(${PROJECT_NAME} dual_arms_lib)
 #rosbuild_add_boost_directories()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
 #target_link_libraries(example ${PROJECT_NAME})
+include_directories(/usr/include/vtk-5.8)
+target_link_libraries(${PROJECT_NAME} ${PCL_LIBRARIES} libvtkCommon.so libvtkFiltering.so libvtkRendering.so)
