--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,6 @@ include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 #set(ROS_BUILD_TYPE RelWithDebInfo)
 
 rosbuild_init()
-
 #set the default path for built executables to the "bin" directory
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 #set the default path for built libraries to the "lib" directory
@@ -33,4 +32,5 @@ target_link_libraries(${PROJECT_NAME} tube_grasp_lib)
 #rosbuild_link_boost(${PROJECT_NAME} thread)
 #target_link_libraries(example ${PROJECT_NAME})
 include_directories(/usr/include/vtk-5.8)
+include_directories(${PROJECT_SOURCE_DIR}/../include)
 target_link_libraries(${PROJECT_NAME} ${PCL_LIBRARIES} libvtkCommon.so libvtkFiltering.so libvtkRendering.so)
