manip_analysis class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ rosbuild_add_library(dual_arms_lib src/dual_arms.cpp src/robot_head.cpp)
 #rosbuild_add_library(dual_arms2_lib src/dual_arms2.cpp)
 rosbuild_add_library(tube_perception_lib src/tube_perception.cpp)
 rosbuild_add_library(tube_grasp_lib src/tube_grasp.cpp)
+rosbuild_add_library(manip_analysis_lib src/manip_analysis.cpp)
 rosbuild_add_executable(${PROJECT_NAME} src/main.cpp)
 #rosbuild_add_executable(tube_tabletop_segmentation src/tabletop_segmentation.cpp)
 target_link_libraries(${PROJECT_NAME} dual_arms_lib)
