--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,8 +30,8 @@ rosbuild_add_executable(${PROJECT_NAME} src/main.cpp)
 target_link_libraries(${PROJECT_NAME} dual_arms_lib)
 target_link_libraries(${PROJECT_NAME} tube_perception_lib)
 target_link_libraries(${PROJECT_NAME} tube_grasp_lib)
-#rosbuild_add_boost_directories()
-#rosbuild_link_boost(${PROJECT_NAME} thread)
+rosbuild_add_boost_directories()
+rosbuild_link_boost(${PROJECT_NAME} thread)
 #target_link_libraries(example ${PROJECT_NAME})
 include_directories(/usr/include/vtk-5.8)
 target_link_libraries(${PROJECT_NAME} ${PCL_LIBRARIES} libvtkCommon.so libvtkFiltering.so libvtkRendering.so)
