attached_collision_obj added.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ rosbuild_add_library(tube_grasp_lib src/tube_grasp.cpp)
 #rosbuild_add_library(manip_analysis_lib src/manip_analysis.cpp)
 rosbuild_add_executable(${PROJECT_NAME} src/main.cpp)
 #rosbuild_add_executable(tube_tabletop_segmentation src/tabletop_segmentation.cpp)
-target_link_libraries(${PROJECT_NAME} dual_arms_lib)
+target_link_libraries(${PROJECT_NAME} tube_manipulation_lib)
 target_link_libraries(${PROJECT_NAME} tube_perception_lib)
 target_link_libraries(${PROJECT_NAME} tube_grasp_lib)
 rosbuild_add_boost_directories()
