higher level control sequence class implemented.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,12 +24,13 @@ rosbuild_add_library(tube_manipulation_lib src/tube_manipulation.cpp src/robot_h
 #rosbuild_add_library(tube_manipulation_lib src/collision_check.cpp)
 rosbuild_add_library(tube_perception_lib src/tube_perception.cpp)
 rosbuild_add_library(tube_grasp_lib src/tube_grasp.cpp)
-#rosbuild_add_library(manip_analysis_lib src/manip_analysis.cpp)
+rosbuild_add_library(control_seq_lib src/control_sequence.cpp)
 rosbuild_add_executable(${PROJECT_NAME} src/main.cpp)
 #rosbuild_add_executable(tube_tabletop_segmentation src/tabletop_segmentation.cpp)
 target_link_libraries(${PROJECT_NAME} tube_manipulation_lib)
 target_link_libraries(${PROJECT_NAME} tube_perception_lib)
 target_link_libraries(${PROJECT_NAME} tube_grasp_lib)
+target_link_libraries(${PROJECT_NAME} control_seq_lib)
 rosbuild_add_boost_directories()
 rosbuild_link_boost(${PROJECT_NAME} thread)
 #target_link_libraries(example ${PROJECT_NAME})
