--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,9 @@ include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 #  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
 #set(ROS_BUILD_TYPE RelWithDebInfo)
 
+find_package(gazebo REQUIRED)
+include_directories(include ${catkin_INCLUDE_DIRS} ${GAZEBO_INCLUDE_DIRS} ${SDFormat_INCLUDE_DIRS})
+
 rosbuild_init()
 #set the default path for built executables to the "bin" directory
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
@@ -20,19 +23,23 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #uncomment if you have defined services
 #rosbuild_gensrv()
 #common commands for building c++ executables and libraries
-rosbuild_add_library(tube_manipulation_lib src/tube_manipulation.cpp src/robot_head.cpp)
+#rosbuild_add_library(tube_manipulation src/tube_manipulation.cpp src/robot_head.cpp)
 #rosbuild_add_library(tube_manipulation_lib src/collision_check.cpp)
-rosbuild_add_library(tube_perception_lib src/tube_perception.cpp)
-rosbuild_add_library(tube_grasp_lib src/tube_grasp.cpp)
-rosbuild_add_library(control_seq_lib src/control_sequence.cpp)
+rosbuild_add_library(manipulation src/manipulation.cpp)
+rosbuild_add_library(tube_perception src/tube_perception.cpp)
+rosbuild_add_library(tube_grasp src/tube_grasp.cpp)
+#rosbuild_add_library(control_seq_lib src/control_sequence.cpp)
 rosbuild_add_executable(${PROJECT_NAME} src/main.cpp)
 #rosbuild_add_executable(tube_tabletop_segmentation src/tabletop_segmentation.cpp)
-target_link_libraries(${PROJECT_NAME} tube_manipulation_lib)
-target_link_libraries(${PROJECT_NAME} tube_perception_lib)
-target_link_libraries(${PROJECT_NAME} tube_grasp_lib)
-target_link_libraries(${PROJECT_NAME} control_seq_lib)
+#target_link_libraries(${PROJECT_NAME} tube_manipulation_lib)
+target_link_libraries(${PROJECT_NAME} tube_perception)
+target_link_libraries(${PROJECT_NAME} tube_grasp)
+target_link_libraries(${PROJECT_NAME} manipulation)
+#target_link_libraries(${PROJECT_NAME} control_seq_lib)
 rosbuild_add_boost_directories()
 rosbuild_link_boost(${PROJECT_NAME} thread)
 #target_link_libraries(example ${PROJECT_NAME})
-include_directories(/usr/include/vtk-5.8)
-target_link_libraries(${PROJECT_NAME} ${PCL_LIBRARIES} libvtkCommon.so libvtkFiltering.so libvtkRendering.so)
+#include_directories(/usr/include/vtk-5.8)
+target_link_libraries(${PROJECT_NAME} ${PCL_LIBRARIES} libmoveit_move_group_interface.so) #libvtkCommon.so libvtkFiltering.so libvtkRendering.so)
+target_link_libraries(${PROJECT_NAME} libmoveit_move_group_interface.so) #libvtkCommon.so libvtkFiltering.so libvtkRendering.so)
+
