improved Grasp class. stateMachine is under construction

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,10 +24,12 @@ rosbuild_add_library(tube_manipulation src/tube_manipulation.cpp src/robot_head.
 #rosbuild_add_library(tube_manipulation_lib src/collision_check.cpp)
 rosbuild_add_library(tube_perception src/tube_perception.cpp)
 rosbuild_add_library(tube_grasp src/tube_grasp.cpp)
-rosbuild_add_library(control_seq src/control_sequence.cpp)
+#rosbuild_add_library(control_seq src/control_sequence.cpp)
+rosbuild_add_library(state_machine src/state_machine.cpp)
 rosbuild_add_executable(${PROJECT_NAME} src/main.cpp)
 #rosbuild_add_executable(tube_tabletop_segmentation src/tabletop_segmentation.cpp)
-target_link_libraries(${PROJECT_NAME} control_seq)
+#target_link_libraries(${PROJECT_NAME} control_seq)
+target_link_libraries(${PROJECT_NAME} state_machine)
 target_link_libraries(${PROJECT_NAME} tube_manipulation)
 target_link_libraries(${PROJECT_NAME} tube_perception)
 target_link_libraries(${PROJECT_NAME} tube_grasp)
